--- a/src/scss/_kioskGallery.scss
+++ b/src/scss/_kioskGallery.scss
@@ -112,6 +112,8 @@ main nav div:nth-child(2) {
   visibility: hidden;
   position: relative;
   height: calc(100% - #{$bar-height});
+
+  background: url("../img/loading.gif") no-repeat center center;
 }
 
 .swipe-wrap {
@@ -141,11 +143,15 @@ main nav div:nth-child(2) {
   background-position: center center;
   background-repeat: no-repeat;
   -webkit-user-drag: none;
+
   /**
-   * Prevent animation blackness
+   * Prevent animation flickering
    */
   -webkit-transform: translate3d(0,0,0);
   transform: translate3d(0,0,0);
+  transform: scale(2, 2);
+  -webkit-backface-visibility: hidden;
+  -webkit-transform-style: preserve-3d;
 }
 .swipe-wrap > div img {
   width: 100%;
