--- a/src/scss/_kioskGallery.scss
+++ b/src/scss/_kioskGallery.scss
@@ -136,8 +136,11 @@ main nav div:nth-child(2) {
 }
 .swipe-wrap > div > div {
   /* background-size: cover;  */
-  width: 100vw;
-  height: 100vh;
+  /* width: 100vw;
+  height: 100vh; */
+  width: 100%;
+  height: 100%;
+  
   
   background-size: auto 100%;
   background-position: center center;
